# emojianki

./: Cargo.toml  README.md  build.sh
.github/workflows/: build.yml  wasm-publish.yml
src/: annotations.rs  available.rs  charlabels.rs  labels.rs  languages.rs  lib.rs  test.rs  xml.rs
web/: catppuccin.css  index.html  mvp.css
