[package]
name = "emojianki"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
genanki-rs-rev = "0.3.0"
log = { version = "0.4", features = ["std"] }
wasm-bindgen = "0.2.126"

console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = []  }
