[package]
name = "emojianki"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
genanki-rs-rev = { git = "https://github.com/viniciusdutra314/genanki-wasm", rev = "bf42192aa0dd33ae011799bb1542391ffb6b3702" }
log = { version = "0.4", features = ["std"] }
wasm-bindgen = "0.2.126"

console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = []  }
icu_experimental = { version = "0.5.0", default-features = false, features = ["compiled_data"] }
quick-xml = "0.41.0"
